--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            <h1>Nikitha Kakarla</h1>
+            <h1>Nkakarla08</h1>
 
         </header>
         <main>
@@ -17,4 +17,3 @@
         </footer>
     </body>
 </html>
-
