--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>    
+    <head>   
+        <title>My Website</title> 
+        <link rel="stylesheet"href="css/styles.css">
     </head>
     <body>
         <header>
@@ -11,9 +13,12 @@
             <p>
                 This is intro to the GitHub
             </p>
+            <p>
+                This is so newwwww.
+            </p>
         </main>
         <footer>
-            
+            &copy; Nikitha Kakarla 2025
         </footer>
     </body>
 </html>
